--- a/.github/workflows/build-codebook.yml
+++ b/.github/workflows/build-codebook.yml
@@ -25,7 +25,9 @@ jobs:
         with:
           root_file: source/codebook/codebook.tex
           latexmk_use_xelatex: true
+          latexmk_shell_escape: true
           work_in_root_file_dir: true
+          extra_system_packages: "gcc g++"
           extra_fonts: |
             ./ubuntu-font-family-0.83/*.ttf
       - name: Push codebook.pdf
